--- a/products.html
+++ b/products.html
@@ -745,7 +745,7 @@
 
     </div>
 
-    <a href="joy.html" class="back-btn">
+    <a href="index.html" class="back-btn">
       <i class="fas fa-arrow-left"></i> Back to Home
     </a>
   </div>
