--- a/about.html
+++ b/about.html
@@ -217,7 +217,7 @@
 
     <!-- Navigation Links -->
     <ul class="nav-links" id="nav-links">
-      <li><a href="joy.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Us</a></li>
       <li><a href="products.html">Products</a></li>
     </ul>
